src/snapshots/component_action.snap
---
source: src/codemod.rs
description: "import { useActionData } from \"@remix-run/react\";\n\nexport function action() {\n  return { hello: \"world\" };\n}\n\nexport default function() {\n  const data = useActionData<typeof loader>();\n  return <h1>{data.hello}</h1>;\n}\n"
expression: "codemod(&input, source_type).unwrap()"
---
import { useActionData } from "@remix-run/react";



export default defineRoute({
  serverAction() {
    return { hello: "world" };
  },
  Component({ actionData: data }) {
    return <h1>{data.hello}</h1>;
  },
});
