src/snapshots/component_loader_binding_identifier.snap
---
source: src/codemod.rs
description: "import { useLoaderData } from \"@remix-run/react\";\n\nexport function loader() {\n  return { hello: \"world\" };\n}\n\nexport default function() {\n  const { hello } = useLoaderData<typeof loader>();\n  return <h1>{hello}</h1>;\n}\n"
expression: "codemod(&input, source_type).unwrap()"
---
import { useLoaderData } from "@remix-run/react";





export default defineRoute({
  serverLoader() {
    return { hello: "world" };
  },
  Component({ loaderData: { hello } }) {
    
    return <h1>{hello}</h1>;
  },
});
