src/snapshots/loader_arrow_function.snap
---
source: src/codemod.rs
description: "export const loader = () => {\n  return { hello: \"world\" };\n}\n"
expression: "codemod(input, source_type).unwrap()"
---
export default defineRoute({
  loader() {
    return { hello: "world" };
  },
});
