src/snapshots/loader_arrow_function_expression_args.snap
---
source: src/codemod.rs
description: "import type { LoaderFunctionArgs } from \"@remix-run/node\";\n\nexport const loader = ({ params, context, request, response }: LoaderFunctionArgs) => ({ hello: \"world\" });\n"
expression: "codemod(&input, source_type).unwrap()"
---
import type { LoaderFunctionArgs } from "@remix-run/node";


export default defineRoute({
  serverLoader: ({ params, context, request, response }: LoaderFunctionArgs) => ({ hello: "world" }),
});
