src/snapshots/loader_function_named.snap
---
source: src/codemod.rs
description: "\nexport function loader() {\n  return { hello: \"world\" };\n}\n        "
expression: "codemod(input, source_type).unwrap()"
---
        
export default defineRoute({
  loader() {
    return { hello: "world" };
  },
});
