src/snapshots/loader_function_named_async.snap
---
source: src/codemod.rs
description: "\nexport async function loader() {\n  return { hello: \"world\" };\n}\n        "
expression: "codemod(input, source_type).unwrap()"
---
        
export default defineRoute({
  async loader() {
    return { hello: "world" };
  },
});
